force-app/main/default/objects/Apttus_Config2__ExternalOrderRollupData__c/Apttus_Config2__ExternalOrderRollupData__c.object-meta.xml
<CustomObject>
    <description>Represents the dynamic rollup data for use in criteria</description>
    <label>External Order Rollup Data</label>
    <nameField>
        <displayFormat>ED-{00000000}</displayFormat>
        <label>Rollup Data Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Order Rollup Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>