force-app/main/default/objects/Apttus_Config2__ExternalOrderRollupData__c/fields/Apttus_Config2__IsCommitted__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsCommitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the order rollup data is already committed to the rollup data</description>
    <inlineHelpText>Indicates whether the order rollup data is already committed to the rollup data</inlineHelpText>
    <label>Is Committed</label>
    <type>Checkbox</type>
</CustomField>