force-app/main/default/objects/Apttus_Config2__ExternalOrderRollupData__c/fields/Apttus_Config2__OrderSummaryId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__OrderSummaryId__c</fullName>
    <description>ID of the associated external summary order</description>
    <inlineHelpText>ID of the associated external summary order</inlineHelpText>
    <label>Order Summary</label>
    <referenceTo>Apttus_Config2__ExternalOrderSummary__c</referenceTo>
    <relationshipLabel>External Order Rollup Data</relationshipLabel>
    <relationshipName>ExternalOrderRollupData</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>