force-app/main/default/objects/Apttus_Config2__ExternalOrderRollupData__c/fields/Apttus_Config2__RollupId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RollupId__c</fullName>
    <description>ID of the associated rollup</description>
    <inlineHelpText>ID of the associated rollup</inlineHelpText>
    <label>Search Filter (CPQ)</label>
    <referenceTo>Apttus_Config2__SearchFilter__c</referenceTo>
    <relationshipLabel>External Order Rollup Data</relationshipLabel>
    <relationshipName>ExternalOrderRollupData</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>