force-app/main/default/objects/Apttus_Config2__ExternalOrderRollupData__c/fields/Apttus_Config2__SoldToAccountId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SoldToAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The ID of the sold to account</description>
    <inlineHelpText>The ID of the sold to account</inlineHelpText>
    <label>Sold To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>External Order Rollup Data</relationshipLabel>
    <relationshipName>ExternalOrderRollupData</relationshipName>
    <type>Lookup</type>
</CustomField>